--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "unity-asset-viewer",
   "displayName": "unity-asset-viewer",
   "description": "Visualizador de arquivos .asset da Unity",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/gustavo-hillesheim/unity-asset-viewer.git"
